deployment/cicd/kustomize/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebill-front
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: phonebill-front
          resources:
            requests:
              cpu: 256m
              memory: 256Mi
            limits:
              cpu: 1024m
              memory: 1024Mi
