deployment/cicd/kustomize/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebill-front
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: phonebill.20.214.196.128.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phonebill-front
            port:
              number: 8080
